# Reducing-PCIe-Bottlenecks-for-LLM-Serving-with-cuSZp-Compressed-KV-Cache-Transfer

./: .gitignore  INFOCOM_2027_PLAN.md  README.md  data_summarize.py  requirements.txt  run.sh  test.sh
benchmarks/: baseline_profiling.py  benchmark_pipeline.py  benchmark_restore_break_even.py  build_joint_sensitivity_profile.py  build_long_context_quality_suite.py  build_multi_prompt_sensitivity_profile.py  compression_benchmark.py  data_summarize.py  evaluate_policies.py  generate_infocom_figures.py  generate_paper_assets.py  generate_real_kv_cache.py  layer_sensitivity_sweep.py  merge_vllm_aggregates.py  plot_summary.py  plot_vllm_repeated_e2e.py  probe_cuszp_sizes.py  prompt_workload.py  run_arrival_rate_sweep.py  run_concurrency_sweep.py  run_experiments.sh  run_gate_d_suite.py  run_pareto_queue_ablation.py  run_vllm_repeated_smoke.py  select_mixed_bound_profile.py  smoke_vllm_compressed_offload.py  test_vllm_integration.py
data/: EXPERIMENT_PROVENANCE.md  Qwen_Qwen2.5-0.5B_results.json  benchmark_summary.md  facebook_opt-350m_results.json  gpt2_results.json  infocom_calibration_prompts.json  qwen2.5-1.5b_mixed_21x1e-4_7x1e-5.json  qwen2.5-1.5b_multi_prompt_sensitivity_top1-0.875.json
data/gate_d_fair_async_probe/: GATE_D_SUMMARY.md  gate_d_summary.json
data/infocom_long_context_quality_v1/: prompts.json  prompts.meta.json
data/qwen0.5b_open_loop_arrival_v1/: ARRIVAL_RATE_SUMMARY.md  arrival_rate_summary.json
data/qwen1.5b_open_loop_arrival_v1/: ARRIVAL_RATE_SUMMARY.md  arrival_rate_summary.json
data/qwen1.5b_real_concurrency_v3/: CONCURRENCY_SUMMARY.md  concurrency_summary.json
data/qwen2.5-1.5b_multi_prompt_sensitivity_1e-5_1e-4_per_prompt/: 00_network_scheduling.json  01_astronomy.json  02_marine_ecosystems.json  03_compiler_optimization.json  04_urban_rail.json  05_medical_imaging.json  06_chinese_systems.json  07_structured_reasoning.json
data/vllm_qwen1.5b_4k_gate_c_packed_mixed21_complete_2trial/: aggregate.json  async_adaptive_trial_1.jsonl  async_adaptive_trial_1_summary.json  async_adaptive_trial_2.jsonl  async_adaptive_trial_2_summary.json  async_cuszp_1e-5_trial_1.jsonl  async_cuszp_1e-5_trial_1_summary.json  async_cuszp_1e-5_trial_2.jsonl  async_cuszp_1e-5_trial_2_summary.json  async_raw_trial_1.jsonl  async_raw_trial_1_summary.json  async_raw_trial_2.jsonl  async_raw_trial_2_summary.json
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  run.sh
documents/data/: EleutherAI_pythia-160m_results.json  EleutherAI_pythia-410m_results.json  Qwen_Qwen2.5-1.5B_results.json  TinyLlama_TinyLlama-1.1B-intermediate-step-1431k-3T_results.json  facebook_opt-125m_results.json
documents/final_report/: main.tex  refs.bib
documents/interim_report/: main.tex
figures/infocom/: README.md  gate-d-cross-model-handler.csv  gate-d-cross-model-handler.tex  (+2 more)
final_report/: One-page_Project_Summary_KONG_Zirui_22103493D.docx  main.tex  polyu-comp.cls  refs.bib
integration/cuszp_wrapper/: CMakeLists.txt  cuszp_batched_fixed.cu  cuszp_fastpath.cu  cuszp_fastpath.h  cuszp_wrapper.cpp  cuszp_wrapper.h  pybind11_bindings.cpp
interim_report/: polyu-comp.cls  refs.bib
paper/: conference_101719.tex  cuSZp-KV项目论文汇报.docx
reproducibility/: README.md  __init__.py  build_hash_manifest.py  environment.json  formal_artifacts.json  formal_data.sha256  install_cuszp.sh  models.json  provenance.py  verify_environment.py
tests/: test_arrival_rate_sweep.py  test_concurrency_sweep.py  test_evaluate_policies.py  test_gate_d_suite.py  test_generate_infocom_figures.py  test_generate_paper_assets.py  test_layer_sensitivity.py  test_long_context_quality_suite.py  test_native_lossless.py  test_plot_summary.py  test_repeated_smoke.py  test_reproducibility_contract.py  test_vllm_v1_compressed_offload.py
(+633 files in other folders)
